po: Make "make maintainer-clean" erase the .pot file.
Rationale:
<https://www.gnu.org/prep/standards/html_node/Standard-Targets.html>
<https://www.gnu.org/software/automake/manual/html_node/Clean.html>

* NEWS: Mention the change.
* gettext-runtime/po/Makefile.in.in (maintainer-clean): Remove the .pot file.
* gettext-tools/examples/hello-*/po/Makefile.am (MAINTAINERCLEANFILES): Add
the .pot file.
* gettext-tools/examples/po/Makefile.am (MAINTAINERCLEANFILES): Likewise.
* gettext-tools/examples/check-examples (func_check_maintainerclean,
func_check_maintainerclean_vpath): Verify the .pot file is removed after
'make maintainer-clean', except when using the older Makefile.in.in
infrastructure.

--- a/NEWS
+++ b/NEWS
@@ -43,6 +43,9 @@
     compliant.  There is no conflict any more between these replacements
     and other possible replacements provided by gnulib or mingw.
 
+* Improvements for maintainers:
+  - The .pot file in a 'po' directory is now erased by "make maintainer-clean".
+
 Version 0.19.8 - June 2016
 
 * Support for reproducible builds:
