--- a/gettext-tools/doc/msgmerge.texi
+++ b/gettext-tools/doc/msgmerge.texi
@@ -120,6 +120,14 @@ The backup suffix is @samp{~}, unless set with @code{--suffix} or the
 @opindex --multi-domain@r{, @code{msgmerge} option}
 Apply @var{ref}.pot to each of the domains in @var{def}.po.
 
+@item --for-msgfmt
+@opindex --for-msgfmt@r{, @code{msgmerge} option}
+Produce a PO file meant for @code{msgfmt} only, not for a translator.
+This option omits untranslated messages, fuzzy messages (except the header
+entry), and obsolete messages from the output.  Also, it omits translator
+comments and @samp{#: @var{filename}:@var{line}} lines from the output.
+In particular, this option implies @samp{--no-fuzzy-matching}.
+
 @item -N
 @itemx --no-fuzzy-matching
 @opindex -N@r{, @code{msgmerge} option}
