xgettext: Vala: Improve parsing of escape sequences.
* gettext-tools/src/x-vala.c (phase7_getc): Don't recognize \?, \a, \1...\7, \U.
Do recognize \$.
* gettext-tools/tests/xgettext-vala-1: Test \t in verbatim strings literals.
* NEWS: Mention the change.

--- a/NEWS
+++ b/NEWS
@@ -40,6 +40,8 @@
   - Pascal:
     xgettext can now extract strings from .rsj files, produced by the
     Free Pascal compiler version 3.0.0 or newer.
+  - Vala:
+    xgettext now parses escape sequences in strings more accurately.
 
 * Runtime behaviour:
   - The interpretation of the language preferences on macOS has been fixed.
