xgettext: Add support for C11 string literals.
* gettext-tools/src/x-c.c (phase5_get): Recognize the u8"..." syntax.
* gettext-tools/tests/xgettext-c-25: New file.
* gettext-tools/tests/Makefile.am (TESTS): Add it.
* NEWS: Mention the change.

--- a/NEWS
+++ b/NEWS
@@ -12,6 +12,9 @@
 
 * Programming languages support:
   - C, C++:
+    xgettext now supports strings in u8"..." syntax, as specified in C11
+    and C++11.
+  - C, C++:
     xgettext now supports 'p'/'P' exponent markers in number tokens, as
     specified in C99 and C++17.
   - C++:
