Simplify Autoconf macros.
* gettext-runtime/m4/intldir.m4: Remove file.
* gettext-runtime/m4/Makefile.am (EXTRA_DIST): Remove intldir.m4.
* gettext-runtime/m4/gettext.m4 (AM_GNU_GETTEXT): Disallow 'no-libtool'
argument. Use libtool always. Remove variables that existed only for backward
compatibility.
* gettext-runtime/m4/intl.m4: Update comments.
* autogen.sh: Ignore gettext.m4 and intl.m4 from gnulib.
* gettext-runtime/intl/Makefile.in: Use libtool always.
(libintl.a, libgnuintl.a): Remove rule.
(.o): Remove suffix rule.
(install-exec, installdirs, uninstall, distclean, dist, distdir): PACKAGE cannot
be anything else than gettext-runtime and gettext-tools any more.
* gettext-tools/configure.ac (intl/Makefile): Update.
* NEWS: Mention that AM_GNU_GETTEXT_INTL_SUBDIR is gone.

--- a/NEWS
+++ b/NEWS
@@ -13,6 +13,7 @@
     no longer available. Instead of including the intl sources in your package,
     we suggest making the libintl library an optional prerequisite of your
     package. This will simplify the build system of your package.
+  - Accordingly, the Autoconf macro AM_GNU_GETTEXT_INTL_SUBDIR is gone as well.
 
 * Programming languages support:
   - C, C++:
