--- a/gettext-runtime/libasprintf/autosprintf.texi
+++ b/gettext-runtime/libasprintf/autosprintf.texi
@@ -19,6 +19,9 @@
 @c   ky = keystroke       @kindex
 @c   pg = program         @pindex
 @c   tp = type            @tindex
+@ifclear texi2html
+@firstparagraphindent insert
+@end ifclear
 @c %**end of header
 @set VERSION 1.0
 
@@ -33,7 +36,7 @@
 This file provides documentation for GNU @code{autosprintf} library.
 
 @copying
-Copyright (C) 2002-2003, 2006-2007, 2018 Free Software Foundation, Inc.
+Copyright (C) 2002-2003, 2006-2007, 2018-2019 Free Software Foundation, Inc.
 
 This manual is free documentation.  It is dually licensed under the
 GNU FDL and the GNU GPL.  This means that you can redistribute this
@@ -63,7 +66,7 @@ A copy of the license is at @url{https://www.gnu.org/licenses/gpl.html}.
 @page
 @vskip 0pt plus 1filll
 @c @insertcopying
-Copyright (C) 2002-2003, 2006-2007, 2018 Free Software Foundation, Inc.
+Copyright (C) 2002-2003, 2006-2007, 2018-2019 Free Software Foundation, Inc.
 
 This manual is free documentation.  It is dually licensed under the
 GNU FDL and the GNU GPL.  This means that you can redistribute this
