libtextstyle: Document when and how to turn off styling.
* libtextstyle/doc/libtextstyle.texi (Basic use): Document when and how to turn
off styling.
* gnulib-local/lib/term-styled-ostream.oo.c (term_styled_ostream_create): Handle
a NULL css_filename explicitly.

--- a/libtextstyle/doc/libtextstyle.texi
+++ b/libtextstyle/doc/libtextstyle.texi
@@ -507,7 +507,10 @@ Basic use of GNU libtextstyle consists of statements like these:
 @end smallexample
 
 Before this snippet, your code needs to determine the name of the style
-file to use (@code{style_file_name}).
+file to use (@code{style_file_name}).  If no styling is desired -- the
+precise condition depends on the value of @code{color_mode} but also on
+your application logic --, you should set @code{style_file_name} to
+@code{NULL}.
 
 An object of type @code{styled_ostream_t} is allocated.  The function
 @code{styled_ostream_create} allocates it; the function
