--- a/gettext-tools/doc/msginit.texi
+++ b/gettext-tools/doc/msginit.texi
@@ -96,12 +96,14 @@ Assume the input file is a NeXTstep/GNUstep localized resource file in
 @subsection Output details
 
 @table @samp
-@item -l @var{ll_CC}
-@itemx --locale=@var{ll_CC}
+@item -l @var{ll_CC[.encoding]}
+@itemx --locale=@var{ll_CC[.encoding]}
 @opindex -l@r{, @code{msginit} option}
 @opindex --locale@r{, @code{msginit} option}
 Set target locale.  @var{ll} should be a language code, and @var{CC} should
-be a country code.  The command @samp{locale -a} can be used to output a list
+be a country code.  The optional part @var{.encoding} specifies the encoding
+of the locale; most often this part is @code{.UTF-8}.
+The command @samp{locale -a} can be used to output a list
 of all installed locales.  The default is the user's locale setting.
 
 @item --no-translator
