libtextstyle: Add a second argument to the 'flush' operations.
* gnulib-local/lib/ostream.oo.h (ostream_flush_scope_t): New type.
(ostream::flush): Add scope parameter.

* gnulib-local/lib/file-ostream.oo.c: Include <unistd.h>, <termios.h>.
(file_ostream::flush): Add a scope parameter.
* gnulib-local/modules/file-ostream (Depends-on): Add 'fsync'.
(configure.ac): Check for tcdrain.

* gnulib-local/lib/fd-ostream.oo.c: Include <unistd.h>, <termios.h>.
(fd_ostream::flush): Add a scope parameter.
(fd_ostream::free): Update flush call.
* gnulib-local/modules/fd-ostream (Depends-on): Add 'fsync'.
(configure.ac): Check for tcdrain.

* gnulib-local/lib/term-ostream.oo.c: Include <unistd.h>, <termios.h>.
(term_ostream::flush): Add scope parameter.
(term_ostream::free): Update flush call.
* gnulib-local/m4/term-ostream.m4 (gl_TERM_OSTREAM): Check for tcdrain.
* gnulib-local/modules/term-ostream (Depends-on): Add 'fsync'.

* gnulib-local/lib/memory-ostream.oo.c (memory_ostream::flush): Add scope
parameter.

* gnulib-local/lib/iconv-ostream.oo.c (iconv_ostream::flush): Add scope
parameter.

* gnulib-local/lib/html-ostream.oo.c (html_ostream::flush): Add scope parameter.
Emit closing </span> tags.

* gnulib-local/lib/fd-styled-ostream.oo.c (fd_styled_ostream::flush): Add scope
parameter.
* gnulib-local/lib/term-styled-ostream.oo.c (term_styled_ostream::flush): Add
scope parameter.
* gnulib-local/lib/html-styled-ostream.oo.c (html_styled_ostream::flush): Add
scope parameter.

* libtextstyle/lib/textstyle.h (ostream_flush_scope_t): New type.
(ostream_flush, styled_ostream_flush, file_ostream_flush, fd_ostream_flush,
term_ostream_flush, memory_ostream_flush, iconv_ostream_flush,
html_ostream_flush, term_styled_ostream_flush, html_styled_ostream_flush): Add
scope parameter.
* libtextstyle/doc/libtextstyle.texi (The ostream class): Add scope parameter to
flush method.
* libtextstyle/NEWS: Mention the change.

--- a/libtextstyle/NEWS
+++ b/libtextstyle/NEWS
@@ -1,3 +1,7 @@
+New in 0.6:
+* The ostream_t operation 'flush' now takes an additional argument, of type
+  ostream_flush_scope_t.
+
 New in 0.5:
 
 * The libtextstyle library can now be built and installed independently
