--- a/libtextstyle/doc/libtextstyle.texi
+++ b/libtextstyle/doc/libtextstyle.texi
@@ -809,6 +809,16 @@ Gets/sets the font posture.
 Gets/sets the text underline decoration.
 @end deftypefn
 
+@deftypefn Function void term_ostream_flush_to_current_style (term_ostream_t@tie{}@var{stream})
+This function acts like @code{ostream_flush (@var{stream}, FLUSH_THIS_STREAM)},
+except that it leaves the terminal with the current text attributes enabled,
+instead of with the default text attributes.
+
+After calling this function, you can output strings without newlines(!) to the
+underlying file descriptor, and they will be rendered like strings passed to
+@code{ostream_write_mem} or @code{ostream_write_str}.
+@end deftypefn
+
 @node The html_ostream class
 @subsubsection The @code{html_ostream} class
 
