libtextstyle: New function html_ostream_flush_to_current_style.
* gnulib-local/lib/html-ostream.oo.h (struct html_ostream): Add method
flush_to_current_style.
* gnulib-local/lib/html-ostream.oo.c (html_ostream::flush_to_current_style): New
method.
* libtextstyle/lib/textstyle.h (html_ostream_flush_to_current_style): New
declaration.
* libtextstyle/doc/libtextstyle.texi (The html_ostream class): Document
html_ostream_flush_to_current_style.
* libtextstyle/NEWS: Mention the change.

--- a/libtextstyle/NEWS
+++ b/libtextstyle/NEWS
@@ -3,6 +3,8 @@ New in 0.6:
   ostream_flush_scope_t.
 * The term_ostream_t type supports a new function
   term_ostream_flush_to_current_style.
+* The html_ostream_t type supports a new function
+  html_ostream_flush_to_current_style.
 
 New in 0.5:
 
