libtextstyle: New function styled_ostream_flush_to_current_style.
* gnulib-local/lib/styled-ostream.oo.h (struct styled_ostream): Add method
flush_to_current_style.
* gnulib-local/lib/fd-styled-ostream.oo.c
(fd_styled_ostream::flush_to_current_style): New method.
* gnulib-local/lib/term-styled-ostream.oo.c
(term_styled_ostream::flush_to_current_style): New method.
* gnulib-local/lib/html-styled-ostream.oo.c
(html_styled_ostream::flush_to_current_style): New method.
* libtextstyle/lib/textstyle.h (styled_ostream_flush_to_current_style): New
declaration.
* libtextstyle/doc/libtextstyle.texi (The styled_ostream class): Document
styled_ostream_flush_to_current_style.
* libtextstyle/NEWS: Mention the change.

--- a/libtextstyle/NEWS
+++ b/libtextstyle/NEWS
@@ -1,10 +1,11 @@
 New in 0.6:
 * The ostream_t operation 'flush' now takes an additional argument, of type
   ostream_flush_scope_t.
-* The term_ostream_t type supports a new function
-  term_ostream_flush_to_current_style.
-* The html_ostream_t type supports a new function
-  html_ostream_flush_to_current_style.
+* New functions:
+       TYPE                               FUNCTION
+  styled_ostream_t          styled_ostream_flush_to_current_style
+  term_ostream_t            term_ostream_flush_to_current_style
+  html_ostream_t            html_ostream_flush_to_current_style
 
 New in 0.5:
 
