libtextstyle: Add support for Windows consoles.
* gnulib-local/lib/term-ostream.oo.c: Include <windows.h>, msvc-nothrow.h,
<io.h>.
(struct term_ostream): Add fields handle, is_windows_console,
default_console_attributes, current_console_attributes.
(out_color_change, out_bgcolor_change, out_underline_change, out_attr_change,
restore, async_restore, async_set_attributes_from_default, term_ostream::flush):
Add separate code path for Windows consoles.
(term_ostream_create): On Windows, test whether the handle refers to a console,
and initialize the new fields.
* gnulib-local/modules/term-ostream (Depends-on): Add msvc-nothrow.
* libtextstyle/NEWS: Mention it.

--- a/libtextstyle/NEWS
+++ b/libtextstyle/NEWS
@@ -5,6 +5,7 @@ New in 0.8:
   - The SIGCONT signal handler would fail to restore the proper styling,
     with a low probability.
   - The SIGTSTP and SIGCONT signal handlers could clobber errno.
+* Added support for Windows consoles.
 
 New in 0.7:
 * Reliable tty control, as described by the ttyctl_t enum, is now implemented.
