libtextstyle: Support for terminal types with 256 colors.
* gnulib-local/lib/term-ostream.oo.c (term_ostream_create): Accept all $TERM
values that end in -16color or -256 color (such as Eterm-256color,
mlterm-256color, or putty-256color).
* libtextstyle/NEWS: Mention the change.

--- a/libtextstyle/NEWS
+++ b/libtextstyle/NEWS
@@ -6,6 +6,7 @@ New in 0.8:
     with a low probability.
   - The SIGTSTP and SIGCONT signal handlers could clobber errno.
 * Added support for Windows consoles.
+* Improved support for TERM=Eterm-256color and TERM=mlterm-256color.
 
 New in 0.7:
 * Reliable tty control, as described by the ttyctl_t enum, is now implemented.
