libtextstyle: Add support for true-color terminals.
* gnulib-local/lib/term-ostream.oo.c (colormodel_t): Add cm_xtermrgb.
(rgb_to_color_xtermrgb): New function.
(attributes_t): Extend the color fields to 25 bits.
(struct term_ostream): New fields active_attr_color, active_attr_bgcolor.
(out_color_change, out_bgcolor_change, term_ostream::rgb_to_color): Handle
cm_xtermrgb.
(out_attr_change): Set also active_attr_color, active_attr_bgcolor.
(async_set_attributes_from_default): Fetch also active_attr_color,
active_attr_bgcolor.
(term_ostream_create): Accept all $TERM values that end in -direct.
* libtextstyle/doc/libtextstyle.texi (Terminal emulators): Document the
prerequisites for true-color support.
* libtextstyle/NEWS: Mention the change.

--- a/libtextstyle/NEWS
+++ b/libtextstyle/NEWS
@@ -7,6 +7,8 @@ New in 0.8:
   - The SIGTSTP and SIGCONT signal handlers could clobber errno.
 * Added support for Windows consoles.
 * Improved support for TERM=Eterm-256color and TERM=mlterm-256color.
+* Added support for terminal emulators with true-color support (16 million
+  colors), such as TERM=xterm-direct and TERM=konsole-direct.
 
 New in 0.7:
 * Reliable tty control, as described by the ttyctl_t enum, is now implemented.
